// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateLineage 2024-10-18.json savefile should generate a lineage for 'Plural' 2`] = `
"Fire + Water = Steam
Fire + Steam = Engine
Earth + Wind = Dust
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Wind + Wind = Tornado
Black Hole + Tornado = Singularity
Earth + Water = Plant
Engine + Plant = Car
Water + Water = Lake
Lake + Water = Ocean
Earth + Ocean = Island
Car + Island = Parking
Lake + Parking = Lot
Earth + Lake = Swamp
Fire + Swamp = Dragon
Dust + Fire = Ash
Ash + Fire = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Not + Singularity = Plural"
`;

exports[`generateLineage 2024-10-18.json savefile should generate a lineage for 'Detective' 2`] = `
"Earth + Water = Plant
Earth + Plant = Tree
Tree + Water = River
Earth + River = Delta
River + Tree = Paper
Paper + Plant = Book
Book + Delta = Alphabet
Alphabet + Alphabet = Word
Word + Word = Sentence
Sentence + Wind = Phrase
Book + Phrase = Quote
Alphabet + Quote = Punctuation
Punctuation + Quote = Apostrophe
Plant + Wind = Dandelion
Dandelion + Plant = Weed
Dandelion + Water = Wine
Water + Wine = Holy Water
Holy Water + Wine = Catholic Church
Catholic Church + Holy Water = Vampire
Vampire + Weed = Count
Count + Count = Number
Weed + Wine = Hangover
Hangover + Number = 1
1 + Alphabet = A
A + Fire = B
Apostrophe + B = B’
A + Apostrophe = A’
A’ + B’ = C’
C’ + C’ = C”
Water + Wind = Wave
Earth + Wave = Sand
Fire + Sand = Glass
Fire + Glass = Lens
Lens + Water = Microscope
Earth + Microscope = Bacteria
Dandelion + Weed = Marijuana
Dandelion + Tree = Wish
Marijuana + Wish = Genie
Bacteria + Genie = E. Coli
E. Coli + Water = Diarrhea
Diarrhea + E. Coli = Colon
Water + Water = Lake
Earth + Lake = Swamp
Fire + Swamp = Dragon
Lake + Plant = Lily
Fire + Lily = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Earth + Wind = Dust
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Colon + Opposite = Semicolon
C” + Semicolon = “;”
Apostrophe + Quote = Quotation Mark
Sand + Wine = Sandwich
Glass + Wind = Window
Sandwich + Window = Sandwich Board
Lake + Sandwich Board = Sign
Earth + Fire = Lava
Lava + Water = Stone
Lava + Stone = Obsidian
Lake + Obsidian = Mirror
Mirror + Obsidian = Black
Fire + Water = Steam
Lens + Steam = Camera
Camera + Earth = Photographer
Black + Photographer = Negative
1 + Count = Two
Negative + Two = -2
-2 + Sign = -
Dust + Lake = Mud
Fire + Mud = Brick
Brick + Steam = Steam Engine
Steam Engine + Water = Steamboat
Brick + Mud = Adobe
Adobe + Steamboat = Adobe Flash
Adobe Flash + Steam = Game
Steam Engine + Wind = Airplane
Airplane + Fire = Crash
Crash + Game = Over
Earth + Over = Under
Lens + Under = Underscore
- + Underscore = _
Quotation Mark + _ = "
" + “;” = “”;
- + “”; = “”
Plant + Steam = Tea
Sand + Water = Beach
Beach + Water = Ocean
Earth + Ocean = Island
Earth + Island = Continent
Continent + Lake = America
America + Tea = Taxes
Lily + Taxes = Filing
Filing + Island = File Island
Earth + Glass = Bottle
Beach + Bottle = Message
Steam + Wave = Surf
Message + Surf = Text
Text + Water = Font
Font + Text = Type
File Island + Type = File Type
Paper + Wind = Kite
Book + Sentence = Prison
Kite + Prison = Jailbird
Paper + Sand = Sandpaper
Jailbird + Sandpaper = File
File + File Type = File Extension
Sandwich + Wine = Picnic
Dust + Picnic = Ants
Ants + Water = Anteater
Anteater + File Extension = .a
.a + Fire = .b
.a + .b = .c
.b + .c = .d
.c + .d = .e
.e + “” = “e”
“e” + “e” = “ee”
.d + .e = .f
.e + .f = .g
.f + .g = .h
.g + .h = .i
.h + .i = .j
.i + .j = .k
.j + .k = .l
.k + .l = .m
.l + .m = .n
.n + “;” = “n”
“ee” + “n” = “en”
Fire + Steam = Engine
Earth + Engine = Tractor
Earth + Tractor = Farm
Farm + Fire = Barbecue
Barbecue + Farm = Cow
Cow + Cow = Bull
Bull + Farm = Ox
Barbecue + Water = Soup
Ox + Soup = Pho
Pho + “en” = Phoen
River + Tea = Tea Party
Tea + Tea Party = Mad Hatter
Lily + Water = Pond
Pond + Wine = Punch
Engine + Plant = Car
Car + Island = Parking
Lake + Parking = Lot
Lot + Opposite = Not
Not + Punch = Hug
Hug + Not = Honey
Honey + Mad Hatter = Queen of Hearts
Fire + Queen of Hearts = Ace Of Spades
.c + “;” = “c”
“c” + “c” = “cc”
.a + “;” = “a;”
.a + “a;” = “a”
“a” + “cc” = “ace”
Ace Of Spades + “ace” = “one”
Earth + Punctuation = Period
Period + “one” = “1”
Phoen + “1” = Phone
Fire + Phone = Call
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Wind + Wind = Tornado
Black Hole + Tornado = Singularity
Not + Singularity = Plural
Call + Plural = Calls
Lily + Window = Monocle
Hangover + Plant = Aspirin
Aspirin + Wind = Sneeze
Monocle + Sneeze = Inspector
Calls + Inspector = Detective"
`;

exports[`generateLineage 2024-10-18.json savefile should generate a lineage for 'Acronym' 2`] = `
"Earth + Water = Plant
Earth + Plant = Tree
Tree + Water = River
River + Tree = Paper
Paper + Plant = Book
Earth + River = Delta
Book + Delta = Alphabet
Fire + Water = Steam
Fire + Steam = Engine
Engine + Engine = Rocket
Rocket + Rocket = Satellite
Satellite + Satellite = Moon
Rocket + Wind = Kite
Kite + Kite = Windmill
Water + Water = Lake
Lake + Water = Ocean
Ocean + Water = Fish
Fish + Rocket = Space Fish
Space Fish + Windmill = Wind Fish
Moon + Wind Fish = Link
Earth + Wind = Dust
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Black Hole + Black Hole = Wormhole
Black Hole + Earth = Hole
Hole + Kite = Pocket
Pocket + Pocket = Pants
Pants + Pocket = Coin
Coin + Wormhole = Bitcoin
Dust + Fire = Ash
Ash + Fire = Phoenix
Earth + Lake = Swamp
Fire + Swamp = Dragon
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Earth + Ocean = Island
Engine + Plant = Car
Car + Island = Parking
Lake + Parking = Lot
Lot + Opposite = Not
Earth + Earth = Mountain
Mountain + Mountain = Mountain Range
Swamp + Swamp = Bog
Ash + Ash = Stone
Stone + Water = Rock
Bog + Rock = Peat
Peat + Peat = Peat Bog
Mountain Range + Peat Bog = Moor
Moor + Not = More
Steam + Stone = Geysir
Geysir + Satellite = Internet
Geysir + Internet = Youtube
More + Youtube = Youtube Red
Youtube + Youtube Red = Youtube Premium
Pants + Pants = Shorts
Shorts + Youtube Premium = Youtube Shorts
Link + Youtube Shorts = Link Shorts
Bitcoin + Link Shorts = Bitly
Bitly + Link = Short
Alphabet + Short = Acronym"
`;

exports[`generateLineage 2024-10-18.json savefile should generate a lineage for 'Soul' 2`] = `
"Earth + Earth = Mountain
Water + Water = Lake
Lake + Mountain = Fjord
Fjord + Mountain = Norway
Earth + Water = Plant
Plant + Wind = Dandelion
Dandelion + Water = Wine
Norway + Wine = Aquavit
Aquavit + Norway = Linie
Linie + Linie = Line
Dandelion + Plant = Weed
Dandelion + Weed = Marijuana
Lake + Water = Ocean
Earth + Ocean = Island
Water + Wind = Wave
Island + Wave = Surf
Earth + Island = Continent
Continent + Surf = Australia
Australia + Earth = Oz
Marijuana + Oz = Ounce
Ounce + Ounce = Pound
Pound + Pound = Ton
Ton + Ton = Tonne
Ton + Tonne = Metric
Earth + Wave = Sand
Fire + Sand = Glass
Glass + Sand = Hourglass
Hourglass + Metric = Second
Fire + Water = Steam
Fire + Steam = Engine
Engine + Plant = Car
Car + Island = Parking
Lake + Parking = Lot
Earth + Lake = Swamp
Fire + Swamp = Dragon
Earth + Wind = Dust
Dust + Fire = Ash
Ash + Fire = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Not + Second = First
First + Line = Head
Head + Line = Neck
Head + Neck = Headless
First + Head = Brain
Brain + Head = Mind
Headless + Mind = Body
Body + Mind = Soul"
`;

exports[`generateLineage 2024-10-18.json savefile should generate a lineage for multiple targets: Plural + Soul 2`] = `
"Earth + Earth = Mountain
Water + Water = Lake
Lake + Mountain = Fjord
Fjord + Mountain = Norway
Earth + Water = Plant
Plant + Wind = Dandelion
Dandelion + Water = Wine
Norway + Wine = Aquavit
Aquavit + Norway = Linie
Linie + Linie = Line
Dandelion + Plant = Weed
Dandelion + Weed = Marijuana
Lake + Water = Ocean
Earth + Ocean = Island
Water + Wind = Wave
Island + Wave = Surf
Earth + Island = Continent
Continent + Surf = Australia
Australia + Earth = Oz
Marijuana + Oz = Ounce
Ounce + Ounce = Pound
Pound + Pound = Ton
Ton + Ton = Tonne
Ton + Tonne = Metric
Earth + Wave = Sand
Fire + Sand = Glass
Glass + Sand = Hourglass
Hourglass + Metric = Second
Fire + Water = Steam
Fire + Steam = Engine
Engine + Plant = Car
Car + Island = Parking
Lake + Parking = Lot
Earth + Lake = Swamp
Fire + Swamp = Dragon
Earth + Wind = Dust
Dust + Fire = Ash
Ash + Fire = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Not + Second = First
First + Line = Head
Head + Line = Neck
Head + Neck = Headless
First + Head = Brain
Brain + Head = Mind
Headless + Mind = Body
Body + Mind = Soul
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Black Hole + Ton = Singularity
Not + Singularity = Plural"
`;

exports[`generateLineage 2024-10-18.json savefile should generate a lineage for multiple targets: Plural + Detective + Acronym 2`] = `
"Earth + Water = Plant
Earth + Plant = Tree
Tree + Water = River
River + Tree = Paper
Paper + Wind = Kite
Fire + Water = Steam
Fire + Steam = Engine
Earth + Wind = Dust
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Black Hole + Earth = Hole
Hole + Kite = Pocket
Pocket + Pocket = Pants
Pants + Pants = Shorts
Earth + Fire = Lava
Lava + Water = Stone
Steam + Stone = Geysir
Engine + Engine = Rocket
Rocket + Rocket = Satellite
Geysir + Satellite = Internet
Geysir + Internet = Youtube
Stone + Water = Rock
Water + Water = Lake
Earth + Lake = Swamp
Swamp + Swamp = Bog
Bog + Rock = Peat
Peat + Peat = Peat Bog
Earth + Earth = Mountain
Mountain + Mountain = Mountain Range
Mountain Range + Peat Bog = Moor
Engine + Plant = Car
Earth + River = Delta
Paper + Plant = Book
Book + Delta = Alphabet
Alphabet + Earth = Planet
Planet + Water = Ocean
Earth + Ocean = Island
Car + Island = Parking
Lake + Parking = Lot
Fire + Swamp = Dragon
Lake + Plant = Lily
Fire + Lily = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Moor + Not = More
More + Youtube = Youtube Red
Youtube + Youtube Red = Youtube Premium
Shorts + Youtube Premium = Youtube Shorts
Ocean + Water = Fish
Fish + Rocket = Space Fish
Kite + Kite = Windmill
Space Fish + Windmill = Wind Fish
Earth + Planet = Moon
Moon + Wind Fish = Link
Link + Youtube Shorts = Link Shorts
Planet + Planet = Star
Star + Wind = Comet
Plant + Wind = Dandelion
Dandelion + Tree = Wish
Tree + Wish = Money
Comet + Money = Bitcoin
Bitcoin + Link Shorts = Bitly
Bitly + Link = Short
Alphabet + Short = Acronym
Alphabet + Alphabet = Word
Word + Word = Sentence
Sentence + Wind = Phrase
Book + Phrase = Quote
Alphabet + Quote = Punctuation
Punctuation + Quote = Apostrophe
Dandelion + Water = Wine
Wine + Wine = Bottle
Water + Wind = Wave
Earth + Wave = Sand
Sand + Water = Beach
Beach + Bottle = Message
Earth + Message = Letter
Fire + Planet = Sun
Sun + Wind = Sunflower
Letter + Sunflower = A
A + Fire = B
Apostrophe + B = B’
A + Apostrophe = A’
A’ + B’ = C’
C’ + C’ = C”
Bottle + Stone = Glass
Fire + Glass = Lens
Lens + Water = Microscope
Earth + Microscope = Bacteria
Money + Wish = Genie
Bacteria + Genie = E. Coli
E. Coli + Water = Diarrhea
Diarrhea + E. Coli = Colon
Colon + Opposite = Semicolon
C” + Semicolon = “;”
Mountain + Sand = Pyramid
Lens + Pyramid = Eye
A + Plant = Apple
Apple + Eye = I
I + Tree = It
Apostrophe + It = It’s
It + Quote = Quotation
It’s + Quotation = Quotation Marks
Sand + Wine = Sandwich
Glass + Wind = Window
Sandwich + Window = Sandwich Board
Lake + Sandwich Board = Sign
Lava + Stone = Obsidian
Lake + Obsidian = Mirror
Mirror + Obsidian = Black
Lens + Steam = Camera
Camera + Earth = Photographer
Black + Photographer = Negative
Plant + Steam = Tea
Earth + Island = Continent
Continent + Lake = America
America + Tea = Taxes
Lily + Taxes = Filing
Filing + Island = File Island
Island + Wave = Surf
Message + Surf = Text
Text + Water = Font
Font + Text = Type
File Island + Type = File Type
Book + Sentence = Prison
Kite + Prison = Jailbird
Paper + Sand = Sandpaper
Jailbird + Sandpaper = File
File + File Type = File Extension
Sandwich + Wine = Picnic
Dust + Picnic = Ants
Ants + Water = Anteater
Anteater + File Extension = .a
.a + Fire = .b
.a + .b = .c
.c + “;” = “c”
“c” + “c” = “cc”
.a + “;” = “a;”
.a + “a;” = “a”
“a” + “cc” = “ace”
“ace” + “a” = “acea”
A + “acea” = Ace
Ace + Hole = One
One + One = Two
Negative + Two = -2
-2 + Sign = -
- + Quotation Marks = "
" + “;” = “”;
- + “”; = “”
.b + .c = .d
.c + .d = .e
.e + “” = “e”
“e” + “e” = “ee”
.d + .e = .f
.e + .f = .g
.f + .g = .h
.g + .h = .i
.h + .i = .j
.i + .j = .k
.j + .k = .l
.k + .l = .m
.l + .m = .n
.n + “;” = “n”
“ee” + “n” = “en”
Earth + Engine = Tractor
Earth + Tractor = Farm
Farm + Fire = Barbecue
Barbecue + Farm = Cow
Cow + Cow = Bull
Bull + Farm = Ox
Barbecue + Water = Soup
Ox + Soup = Pho
Pho + “en” = Phoen
Money + Tea = Tea Party
Tea + Tea Party = Mad Hatter
Lily + Water = Pond
Pond + Wine = Punch
Not + Punch = Hug
Hug + Not = Honey
Honey + Mad Hatter = Queen of Hearts
Fire + Queen of Hearts = Ace Of Spades
Ace Of Spades + “ace” = “one”
Earth + Punctuation = Period
Period + “one” = “1”
Phoen + “1” = Phone
Fire + Phone = Call
Wind + Wind = Tornado
Black Hole + Tornado = Singularity
Not + Singularity = Plural
Call + Plural = Calls
Lily + Window = Monocle
Dandelion + Plant = Weed
Weed + Wine = Hangover
Hangover + Plant = Aspirin
Aspirin + Wind = Sneeze
Monocle + Sneeze = Inspector
Calls + Inspector = Detective"
`;

exports[`generateLineage 2025-04-04.ic savefile should generate a lineage for 'Plural' 2`] = `
"Fire + Water = Steam
Fire + Steam = Engine
Earth + Wind = Dust
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Wind + Wind = Tornado
Black Hole + Tornado = Singularity
Earth + Water = Plant
Engine + Plant = Car
Water + Water = Lake
Lake + Water = Ocean
Earth + Ocean = Island
Car + Island = Parking
Lake + Parking = Lot
Earth + Lake = Swamp
Fire + Swamp = Dragon
Dust + Fire = Ash
Ash + Fire = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Not + Singularity = Plural"
`;

exports[`generateLineage 2025-04-04.ic savefile should generate a lineage for 'Detective' 2`] = `
"Earth + Water = Plant
Water + Wind = Wave
Earth + Wave = Sand
Fire + Sand = Glass
Glass + Water = Wine
Fire + Wine = Alcohol
Alcohol + Wind = Hangover
Hangover + Plant = Aspirin
Aspirin + Wind = Sneeze
Glass + Wind = Window
Water + Water = Lake
Lake + Plant = Lily
Lily + Window = Monocle
Monocle + Sneeze = Inspector
Fire + Lily = Phoenix
Earth + Lake = Swamp
Fire + Swamp = Dragon
Dragon + Phoenix = Yin Yang
Earth + Wind = Dust
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lake + Water = Ocean
Earth + Ocean = Island
Fire + Water = Steam
Fire + Steam = Engine
Engine + Plant = Car
Car + Island = Parking
Lake + Parking = Lot
Lot + Opposite = Not
Wind + Wind = Tornado
Earth + Plant = Tree
Tree + Water = River
River + Tree = Paper
Paper + Plant = Book
Earth + River = Delta
Book + Delta = Alphabet
Alphabet + Alphabet = Word
Word + Word = Sentence
Sentence + Wind = Phrase
Book + Phrase = Quote
Earth + Quote = Gravity
Gravity + Gravity = Black Hole
Black Hole + Tornado = Singularity
Not + Singularity = Plural
Alphabet + Quote = Punctuation
Earth + Punctuation = Period
Sand + Wine = Sandwich
Sandwich + Wine = Picnic
Dust + Picnic = Ants
Ants + Water = Anteater
Paper + Sand = Sandpaper
Book + Sentence = Prison
Paper + Wind = Kite
Kite + Prison = Jailbird
Jailbird + Sandpaper = File
Island + Wave = Surf
Sand + Water = Beach
Earth + Glass = Bottle
Beach + Bottle = Message
Message + Surf = Text
Text + Water = Font
Font + Text = Type
Earth + Island = Continent
Continent + Lake = America
Plant + Steam = Tea
America + Tea = Taxes
Lily + Taxes = Filing
Filing + Island = File Island
File Island + Type = File Type
File + File Type = File Extension
Anteater + File Extension = .a
.a + Fire = .b
.a + .b = .c
Punctuation + Wind = Comma
Comma + Period = Semicolon
Punctuation + Quote = Apostrophe
Apostrophe + River = Possessive
Apostrophe + Possessive = Apostrophe S
Alphabet + Apostrophe S = A
A + Apostrophe = A’
A + Fire = B
Apostrophe + B = B’
A’ + B’ = C’
C’ + C’ = C”
C” + Semicolon = “;”
.c + “;” = “c”
“c” + “c” = “cc”
Book + Quote = Bible
Alphabet + Bible = Abc
Abc + Possessive = Abc's
Abc's + Quote = "A"
"A" + “cc” = “a”
“a” + “cc” = “ace”
Dust + Plant = Pollen
Pollen + Water = Honey
River + Tea = Tea Party
Tea + Tea Party = Mad Hatter
Honey + Mad Hatter = Queen of Hearts
Fire + Queen of Hearts = Ace Of Spades
Ace Of Spades + “ace” = “one”
Period + “one” = “1”
Earth + Engine = Tractor
Earth + Tractor = Farm
Farm + Fire = Barbecue
Barbecue + Water = Soup
Barbecue + Farm = Cow
Cow + Cow = Bull
Bull + Farm = Ox
Ox + Soup = Pho
.b + .c = .d
.c + .d = .e
.a + .e = .i
.a + .i = .j
.i + .j = .k
.j + .k = .l
.k + .l = .m
.l + .m = .n
.n + “;” = “n”
Earth + Fire = Lava
Lava + Water = Stone
Steam + Stone = Geysir
Geysir + Steam = Hot Spring
Engine + Engine = Rocket
Rocket + Rocket = Satellite
Geysir + Satellite = Internet
Sand + Wind = Dune
Alphabet + Earth = Planet
Dune + Planet = Tatooine
Dune + Tatooine = Star Wars
Internet + Star Wars = 4Chan
4Chan + Hot Spring = /a/
.e + /a/ = /e/
Sand + Stone = Pyramid
Gravity + Tree = Apple
Apple + Pyramid = Eye
"A" + Eye = "I"
"I" + "I" = "ii"
"ii" + /e/ = "ee"
"I" + "ee" = "e"
"e" + “n” = “en”
Pho + “en” = Phoen
Phoen + “1” = Phone
Fire + Phone = Call
Call + Plural = Calls
Calls + Inspector = Detective"
`;

exports[`generateLineage 2025-04-04.ic savefile should generate a lineage for 'Acronym' 2`] = `
"Earth + Water = Plant
Plant + Wind = Dandelion
Fire + Wind = Smoke
Smoke + Water = Fog
Dandelion + Fog = Fairy
Earth + Fairy = Gnome
Earth + Gnome = Dwarf
Fire + Water = Steam
Earth + Steam = Mud
Fire + Mud = Brick
Brick + Steam = Steam Engine
Steam Engine + Water = Steamboat
Fire + Fire = Volcano
Fire + Volcano = Lava
Lava + Water = Stone
Stone + Stone = Boulder
Boulder + Water = Waterfall
Steamboat + Waterfall = Niagara Falls
Water + Wind = Wave
Water + Wave = Tsunami
Tsunami + Volcano = Earthquake
Earthquake + Gnome = Goblin
Earthquake + Goblin = Troll
Troll + Water = Bridge
Bridge + Niagara Falls = Honeymoon
Dwarf + Honeymoon = Short
Earth + Plant = Tree
Tree + Water = River
Earth + River = Delta
River + Tree = Paper
Paper + Plant = Book
Book + Delta = Alphabet
Alphabet + Short = Acronym"
`;

exports[`generateLineage 2025-04-04.ic savefile should generate a lineage for 'Soul' 2`] = `
"Earth + Earth = Mountain
Water + Water = Lake
Lake + Mountain = Fjord
Fjord + Mountain = Norway
Earth + Water = Plant
Plant + Wind = Dandelion
Dandelion + Water = Wine
Norway + Wine = Aquavit
Aquavit + Norway = Linie
Linie + Linie = Line
Dandelion + Plant = Weed
Dandelion + Weed = Marijuana
Lake + Water = Ocean
Earth + Ocean = Island
Water + Wind = Wave
Island + Wave = Surf
Earth + Island = Continent
Continent + Surf = Australia
Australia + Earth = Oz
Marijuana + Oz = Ounce
Ounce + Ounce = Pound
Pound + Pound = Ton
Ton + Ton = Tonne
Ton + Tonne = Metric
Earth + Wave = Sand
Fire + Sand = Glass
Glass + Sand = Hourglass
Hourglass + Metric = Second
Fire + Water = Steam
Fire + Steam = Engine
Engine + Plant = Car
Car + Island = Parking
Lake + Parking = Lot
Earth + Lake = Swamp
Fire + Swamp = Dragon
Earth + Wind = Dust
Dust + Fire = Ash
Ash + Fire = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Not + Second = First
First + Line = Head
Head + Line = Neck
Head + Neck = Headless
First + Head = Brain
Brain + Head = Mind
Headless + Mind = Body
Body + Mind = Soul"
`;

exports[`generateLineage 2025-04-04.ic savefile should generate a lineage for multiple targets: Plural + Soul 2`] = `
"Earth + Earth = Mountain
Water + Water = Lake
Lake + Mountain = Fjord
Fjord + Mountain = Norway
Earth + Water = Plant
Plant + Wind = Dandelion
Dandelion + Water = Wine
Norway + Wine = Aquavit
Aquavit + Norway = Linie
Linie + Linie = Line
Dandelion + Plant = Weed
Dandelion + Weed = Marijuana
Lake + Water = Ocean
Earth + Ocean = Island
Water + Wind = Wave
Island + Wave = Surf
Earth + Island = Continent
Continent + Surf = Australia
Australia + Earth = Oz
Marijuana + Oz = Ounce
Ounce + Ounce = Pound
Pound + Pound = Ton
Ton + Ton = Tonne
Ton + Tonne = Metric
Earth + Wave = Sand
Fire + Sand = Glass
Glass + Sand = Hourglass
Hourglass + Metric = Second
Fire + Water = Steam
Fire + Steam = Engine
Engine + Plant = Car
Car + Island = Parking
Lake + Parking = Lot
Earth + Lake = Swamp
Fire + Swamp = Dragon
Earth + Wind = Dust
Dust + Fire = Ash
Ash + Fire = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Not + Second = First
First + Line = Head
Head + Line = Neck
Head + Neck = Headless
First + Head = Brain
Brain + Head = Mind
Headless + Mind = Body
Body + Mind = Soul
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Black Hole + Ton = Singularity
Not + Singularity = Plural"
`;

exports[`generateLineage 2025-04-04.ic savefile should generate a lineage for multiple targets: Plural + Detective + Acronym 2`] = `
"Earth + Water = Plant
Plant + Wind = Dandelion
Fire + Wind = Smoke
Smoke + Water = Fog
Dandelion + Fog = Fairy
Earth + Fairy = Gnome
Earth + Gnome = Dwarf
Water + Wind = Wave
Water + Wave = Tsunami
Tsunami + Wind = Hurricane
Hurricane + Plant = Palm Tree
Palm Tree + Palm Tree = Coconut
Fire + Water = Steam
Coconut + Steam = Steamboat
Fire + Fire = Volcano
Fire + Volcano = Lava
Lava + Water = Stone
Stone + Stone = Boulder
Boulder + Water = Waterfall
Steamboat + Waterfall = Niagara Falls
Tsunami + Volcano = Earthquake
Earthquake + Gnome = Goblin
Earthquake + Goblin = Troll
Troll + Water = Bridge
Bridge + Niagara Falls = Honeymoon
Dwarf + Honeymoon = Short
Water + Waterfall = River
Earth + River = Delta
Earth + Plant = Tree
River + Tree = Paper
Paper + Plant = Book
Book + Delta = Alphabet
Alphabet + Short = Acronym
Alphabet + Alphabet = Word
Word + Word = Sentence
Sentence + Wind = Phrase
Book + Phrase = Quote
Book + Quote = Bible
Alphabet + Bible = Abc
Alphabet + Quote = Punctuation
Punctuation + Quote = Apostrophe
Apostrophe + River = Possessive
Abc + Possessive = Abc's
Abc's + Quote = "A"
Earth + Wave = Sand
Fire + Sand = Glass
Fire + Glass = Lens
Sand + Stone = Pyramid
Lens + Pyramid = Eye
"A" + Eye = "I"
"I" + "I" = "ii"
Sand + Wind = Dune
Earth + Wind = Dust
Dust + Earth = Planet
Dune + Planet = Tatooine
Dune + Tatooine = Star Wars
Steam + Stone = Geysir
Fire + Steam = Engine
Engine + Engine = Rocket
Rocket + Rocket = Satellite
Geysir + Satellite = Internet
Internet + Star Wars = 4Chan
Geysir + Steam = Hot Spring
4Chan + Hot Spring = /a/
Water + Water = Lake
Lake + Plant = Lily
Plant + Steam = Tea
Earth + Tsunami = Island
Earth + Island = Continent
Continent + Lake = America
America + Tea = Taxes
Lily + Taxes = Filing
Filing + Island = File Island
Earth + Glass = Bottle
Sand + Water = Beach
Beach + Bottle = Message
Steam + Wave = Surf
Message + Surf = Text
Text + Water = Font
Font + Text = Type
File Island + Type = File Type
Paper + Wind = Kite
Book + Sentence = Prison
Kite + Prison = Jailbird
Paper + Sand = Sandpaper
Jailbird + Sandpaper = File
File + File Type = File Extension
Dandelion + Water = Wine
Sand + Wine = Sandwich
Sandwich + Wine = Picnic
Dust + Picnic = Ants
Ants + Water = Anteater
Anteater + File Extension = .a
.a + Fire = .b
.a + .b = .c
.b + .c = .d
.c + .d = .e
.e + /a/ = /e/
"ii" + /e/ = "ee"
"I" + "ee" = "e"
.a + .e = .i
"A" + .i = 1
1 + Alphabet = A
A + Fire = B
Apostrophe + B = B’
A + Apostrophe = A’
A’ + B’ = C’
C’ + C’ = C”
Punctuation + Wind = Comma
Earth + Punctuation = Period
Comma + Period = Semicolon
C” + Semicolon = “;”
.a + .i = .j
.i + .j = .k
.j + .k = .l
.k + .l = .m
.l + .m = .n
.n + “;” = “n”
"e" + “n” = “en”
Earth + Engine = Tractor
Earth + Tractor = Farm
Farm + Fire = Barbecue
Barbecue + Farm = Cow
Cow + Cow = Bull
Bull + Farm = Ox
Barbecue + Water = Soup
Ox + Soup = Pho
Pho + “en” = Phoen
River + Tea = Tea Party
Tea + Tea Party = Mad Hatter
Dust + Plant = Pollen
Pollen + Water = Honey
Honey + Mad Hatter = Queen of Hearts
Fire + Queen of Hearts = Ace Of Spades
.c + “;” = “c”
“c” + “c” = “cc”
"A" + “cc” = “a”
“a” + “cc” = “ace”
Ace Of Spades + “ace” = “one”
Period + “one” = “1”
Phoen + “1” = Phone
Fire + Phone = Call
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Wind + Wind = Tornado
Black Hole + Tornado = Singularity
Engine + Plant = Car
Car + Island = Parking
Lake + Parking = Lot
Fire + Gnome = Dragon
Fire + Lily = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Not + Singularity = Plural
Call + Plural = Calls
Glass + Wind = Window
Lily + Window = Monocle
Dandelion + Plant = Weed
Weed + Wine = Hangover
Hangover + Plant = Aspirin
Aspirin + Wind = Sneeze
Monocle + Sneeze = Inspector
Calls + Inspector = Detective"
`;

exports[`generateLineage catstone-2026-06-06.ic savefile should generate a lineage for 'Plural' 2`] = `
"Earth + Wind = Dust
Earth + Water = Plant
Dust + Plant = Pollen
Dust + Pollen = Allergy
Allergy + Allergy = Sneeze
Earth + Fire = Lava
Lava + Water = Stone
Sneeze + Stone = Snot
Dust + Water = Mud
Fire + Mud = Brick
Brick + Wind = House
Fire + House = Fireplace
Fire + Fireplace = Warmth
Warmth + Wind = Hot Air
Hot Air + Mud = Politician
Politician + Snot = Not
Dust + Earth = Planet
Planet + Planet = Star
Wind + Wind = Tornado
Star + Tornado = Black Hole
Black Hole + Tornado = Singularity
Not + Singularity = Plural"
`;

exports[`generateLineage catstone-2026-06-06.ic savefile should generate a lineage for 'Detective' 2`] = `
"Earth + Wind = Dust
Dust + Dust = Sand
Fire + Sand = Glass
Fire + Glass = Lens
Fire + Lens = Magnifying Glass
Dust + Fire = Ash
Ash + Glass = Vase
Magnifying Glass + Vase = Evidence
Evidence + Magnifying Glass = Detective"
`;

exports[`generateLineage catstone-2026-06-06.ic savefile should generate a lineage for 'Acronym' 2`] = `
"Earth + Water = Plant
Earth + Plant = Tree
Tree + Water = River
Earth + River = Delta
River + Tree = Paper
Paper + Tree = Book
Book + Delta = Alphabet
Alphabet + Book = Dictionary
Dictionary + Dictionary = Thesaurus
Delta + Fire = Pyramid
Pyramid + Water = Tomb
Thesaurus + Tomb = Cryptonym
Alphabet + Cryptonym = Acronym"
`;

exports[`generateLineage catstone-2026-06-06.ic savefile should generate a lineage for 'Soul' 2`] = `
"Earth + Wind = Dust
Dust + Water = Mud
Fire + Mud = Brick
Brick + Wind = House
Fire + House = Fireplace
Earth + Water = Plant
Earth + Plant = Tree
Fireplace + Tree = Log
Brick + Brick = Wall
Wall + Water = Dam
Dust + Earth = Planet
Brick + Planet = Mars
Mars + Wall = War
Dam + War = Armageddon
Armageddon + Log = Arm
Arm + Arm = Body
Earth + Mars = Life
Body + Life = Soul"
`;

exports[`generateLineage catstone-2026-06-06.ic savefile should generate a lineage for multiple targets: Plural + Soul 2`] = `
"Earth + Wind = Dust
Dust + Earth = Planet
Dust + Wind = Sandstorm
Planet + Sandstorm = Mars
Earth + Mars = Life
Earth + Water = Plant
Earth + Plant = Tree
Tree + Water = River
River + Tree = Paper
Fire + Wind = Smoke
Smoke + Water = Fog
Dust + Fog = Smog
Smog + Tree = Lung
Lung + Paper = Tissue
Tissue + Tissue = Muscle
Muscle + Muscle = Bicep
Bicep + Muscle = Arm
Arm + Arm = Body
Body + Life = Soul
Planet + Planet = Star
Sandstorm + Star = Supernova
Supernova + Supernova = Black Hole
Black Hole + River = Singularity
Planet + Water = Ocean
Paper + Tree = Book
Dust + Fire = Ash
Ash + Tree = Pencil
Book + Pencil = Homework
Star + Tree = Christmas
Christmas + Homework = No
No + Ocean = Not
Not + Singularity = Plural"
`;

exports[`generateLineage catstone-2026-06-06.ic savefile should generate a lineage for multiple targets: Plural + Detective + Acronym 2`] = `
"Earth + Water = Plant
Earth + Plant = Tree
Tree + Water = River
Earth + River = Delta
River + Tree = Paper
Paper + Tree = Book
Book + Delta = Alphabet
Alphabet + Book = Dictionary
Dictionary + Dictionary = Thesaurus
Delta + Fire = Pyramid
Pyramid + Water = Tomb
Thesaurus + Tomb = Cryptonym
Alphabet + Cryptonym = Acronym
Pyramid + Wind = Sand
Fire + Sand = Glass
Fire + Glass = Lens
Fire + Lens = Magnifying Glass
Fire + Tree = Ash
Ash + Glass = Vase
Magnifying Glass + Vase = Evidence
Evidence + Magnifying Glass = Detective
Alphabet + Dictionary = Language
Dictionary + Language = English
Acronym + Delta = NASA
NASA + NASA = Space
Space + Water = Black Hole
Black Hole + River = Singularity
English + Singularity = Singular
Singular + Singular = Plural"
`;
